# Dynamic_SBWT_experiments

./: .gitignore  .gitmodules  README.md  build_all.sh  build_expanding.sh  build_expanding_cbl.sh  build_expanding_concat.sh  build_expanding_sbwt.sh  build_expanding_unitigs.sh  build_ubuntu.txt  coli.txt  delete.ipynb  delete_rare.sh  downloader.py  expanding.ipynb  fof.txt  fof_build.txt  fof_query.txt  insert.ipynb  install_all.sh  install_apt_dependencies.sh  install_bifrost.sh  install_bufboss.sh  install_dynboss.sh  install_sbwt.sh  install_sshash.sh  main.py  pictures.py  plots.py  query.ipynb  run_bifrost.py  run_bufboss.py  run_cbl.py  run_dynboss.py  run_hashset.py  run_sbwt.py  run_sshash.py  runner.py  scaling.ipynb  stats.py  (+5 more)
hashset/: .gitignore  Cargo.toml  build.rs
hashset/src/: main.rs
slurm_jobs/: build_coli.job  build_concat.job  build_unitigs.job  delete_bact.job  delete_bact_r.job  delete_coli.job  delete_coli_r.job  insert_bact.job  insert_coli.job  query_bact.job  query_bact_big.job  query_bact_pos.job  query_coli.job  query_coli_big.job  query_coli_pos.job
