[package]
name = "hashset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
cbl = { git = "https://github.com/imartayan/CBL.git", version = "0.1.0" }
clap = { version = "4.4", features = ["derive"] }
needletail = "0.4"

[profile.dev]
opt-level = 1
lto = "thin"
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
incremental = true
